<resources>
    <string name="app_name">Rumedo Reg App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Зольников Алексей</string>
    <string name="nav_header_subtitle">Android Developer</string>
    <string name="nav_user_list">Список пользователей</string>
    <string name="nav_user_reg">Регистрация пользователей</string>
    <string name="nav_communication">Связь</string>
    <string name="nav_feedback">Форма обратной связи</string>
    <string name="nav_about">О разработчике</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_admin">Администратор проекта</string>
    <string name="save_preference">Save Preference</string>
    <string name="enter_your_pref">enter your pref</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="reg_date">reg date</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_event">Событие</string>
    <string name="enter_event">Мероприятие</string>
    <string name="reg_name_field">Введите имя</string>
    <string name="reg_name_label">Имя</string>
    <string name="reg_btn">Зарегистрировать</string>
    <string name="reg_surname_label">Фамилия</string>
    <string name="reg_surname_field">Введите фамилию</string>
    <string name="reg_email_label">E-mail</string>
    <string name="reg_email_field">Введите E-mail</string>
    <string name="reg_phone_label">Телефон</string>
    <string name="reg_phone_field">Введите телефон</string>
    <string name="is_sync">is sync</string>
    <string name="reg_city_field">Введите город</string>
    <string name="reg_city_label">Укажите город</string>

    <string-array name="cities">
        <item>Москва</item>
        <item>Казань</item>
        <item>Новгород</item>
        <item>Новосибирск</item>
        <item>Воркута</item>
    </string-array>
</resources>
