<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_list"
            android:title="@string/nav_user_list"
            android:icon="@drawable/ic_user_list"/>
        <item
            android:title="@string/nav_user_reg"
            android:icon="@drawable/ic_user_reg"/>
    </group>

    <item android:title="@string/nav_communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:title="@string/nav_feedback"
                    android:icon="@drawable/ic_feedback"/>
                <item
                    android:title="@string/nav_about"
                    android:icon="@drawable/ic_about"/>
            </group>
        </menu>
    </item>

</menu>