<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.MainFragment">

    <TextView
        android:id="@+id/text_user_administrator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/user_admin" />

    <EditText
        android:id="@+id/edit_user_administrator"
        app:layout_constraintTop_toBottomOf="@+id/text_user_administrator"
        android:layout_width="match_parent"
        android:inputType="text"
        android:hint="@string/enter_your_pref"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:autofillHints="text" />
    <Button
        android:id="@+id/save_preference"
        app:layout_constraintTop_toBottomOf="@+id/edit_user_administrator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_preference"/>

</android.support.constraint.ConstraintLayout>